--- a/AdventOfCode 2025/AdventOfCode 2025.vcxproj
+++ b/AdventOfCode 2025/AdventOfCode 2025.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="Day2.cpp" />
     <ClCompile Include="Day3.cpp" />
     <ClCompile Include="Day4.cpp" />
+    <ClCompile Include="Day5.cpp" />
     <ClCompile Include="Helper.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="SplitString.cpp" />
@@ -161,6 +162,7 @@
     <Text Include="Day2.txt" />
     <Text Include="Day3.txt" />
     <Text Include="Day4.txt" />
+    <Text Include="Day5.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
