--- a/AdventOfCode 2025/AdventOfCode 2025.vcxproj.filters
+++ b/AdventOfCode 2025/AdventOfCode 2025.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="Day4.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Day5.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Helper.h">
@@ -53,5 +56,6 @@
     <Text Include="Day2.txt" />
     <Text Include="Day3.txt" />
     <Text Include="Day4.txt" />
+    <Text Include="Day5.txt" />
   </ItemGroup>
 </Project>
